fix(build): modernize file APIs